--- a/webpage/package.json
+++ b/webpage/package.json
@@ -19,6 +19,8 @@
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "styled-components": "^5.3.3",
+    "three": "^0.137.5",
+    "vanta": "^0.5.21",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
