updated knex and heroku

--- a/webpage-backend/package.json
+++ b/webpage-backend/package.json
@@ -8,10 +8,10 @@
     "rollback": "knex migrate:rollback",
     "seed": "knex seed:run",
     "resetdb": "npm run rollback && npm run migrate && npm run seed",
-    "migrate:prod": "heroku run knex migrate:latest -a water-plants-bw",
-    "rollback:prod": "heroku run knex migrate:rollback -a water-plants-bw",
-    "database:prod": "heroku pg:psql -a water-plants-bw",
-    "seed:prod": "heroku run knex seed:run -a water-plants-bw",
+    "migrate:prod": "heroku run knex migrate:latest -a backend-fletcher",
+    "rollback:prod": "heroku run knex migrate:rollback -a backend-fletcher",
+    "database:prod": "heroku pg:psql -a backend-fletcher",
+    "seed:prod": "heroku run knex seed:run -a backend-fletcher",
     "test": "cross-env NODE_ENV=testing jest --verbose --runInBand",
     "deploy": "git push heroku main"
   },
