--- a/webpage/package.json
+++ b/webpage/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.27.2",
     "date-fns": "^2.28.0",
     "dotenv": "^10.0.0",
     "react": "^17.0.2",
